--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
 name = "llamaedge"
 version = "0.1.0"
+authors = ["Liu Xin"]
 edition = "2021"
+description = "A library for interacting with LlamaEdge API"
+license = "Apache-2.0"
+repository = "https://github.com/LlamaEdge/llamaedge-rust"
+keywords = ["llamaedge", "llm"]
+categories = ["api-bindings"]
+readme = "README.md"
+documentation = "https://docs.rs/llamaedge/"
 
 [dependencies]
 thiserror = "2"
