--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,7 @@ documentation = "https://docs.rs/llamaedge/"
 thiserror = "2"
 url = "2.5.4"
 endpoints = { version = "0.23.0", features = ["full"] }
-reqwest = { version = "0.12.0", features = ["json", "stream"] }
+reqwest = { version = "0.12.0", features = ["json", "stream", "multipart"] }
 futures = { version = "0.3.6", default-features = false, features = ["async-await", "std"] }
 serde_json = "1.0.134"
-
-[dev-dependencies]
 tokio = { version = "1.39.0", features = ["full"] }
