--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ readme = "README.md"
 documentation = "https://docs.rs/llamaedge/"
 
 [dependencies]
-endpoints = { version = "0.23.0", features = ["full"] }
+endpoints = { version = "0.23.0", features = [
+    "full",
+], git = "https://github.com/LlamaEdge/LlamaEdge.git", branch = "dev" }
 futures = { version = "0.3.6", default-features = false, features = ["async-await", "std"] }
 reqwest = { version = "0.12.0", features = ["json", "stream", "multipart"] }
 serde_json = "1.0.134"
