chore: add `audio`, `image` and `full` features
Signed-off-by: Xin Liu <sam@secondstate.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,9 @@ serde_json = "1.0.134"
 thiserror = "2"
 tokio = { version = "1.39.0", features = ["full"] }
 url = "2.5.4"
+
+[features]
+default = []
+full = ["audio", "image"]
+audio = []
+image = []
