--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 documentation = "https://docs.rs/llamaedge/"
 
 [dependencies]
-endpoints = { version = "0.23.1", features = ["full"] }
+endpoints = { version = "0.23.2", git = "https://github.com/LlamaEdge/LlamaEdge.git", branch = "dev" }
 futures = { version = "0.3.6", default-features = false, features = ["async-await", "std"] }
 reqwest = { version = "0.12.0", features = ["json", "stream", "multipart"] }
 serde_json = "1.0.134"
@@ -22,9 +22,10 @@ url = "2.5.4"
 
 [features]
 default = []
-full = ["audio", "image"]
-audio = []
+full = ["audio", "image", "rag"]
+audio = ["endpoints/whisper"]
 image = []
+rag = ["endpoints/rag"]
 
 [package.metadata.docs.rs]
 all-features = true
@@ -52,3 +53,9 @@ name = "create_image"
 path = "examples/create_image.rs"
 crate-type = ["bin"]
 required-features = ["image"]
+
+[[example]]
+name = "rag_retrieve_context"
+path = "examples/rag_retrieve_context.rs"
+crate-type = ["bin"]
+required-features = ["rag"]
